docs: delete rule controller
